# garage_api

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  PROJECT_SETUP_GUIDE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py
app/: __init__.py  database.py  main.py  models.py
app/api/: parts.py
app/db/: database.py  init_db.py  models.py
app/migrations/: env.py
app/migrations/versions/: 3caac7fc7f8c_initial.py  6a2767a2f2a8_add_price_column.py
app/schemas/: __init__.py  part.py
app/scripts/: create_example_data.py  quick_test.py  setup.py  test_full_api.py
app/services/: garage.py
csharp-app/: Program.cs  csharp-app.csproj
scripts/: debug_paths.py  trace_imports.py
